[gd_scene load_steps=18 format=3 uid="uid://b5t2jyubv6nib"]

[ext_resource type="Script" uid="uid://dm50r0agt5v6n" path="res://scenes/main-menu/mainmenu.gd" id="1_ngnu3"]
[ext_resource type="Script" uid="uid://ck27ew68cm2ii" path="res://scenes/main-menu/clock_background.gd" id="1_qs7d8"]
[ext_resource type="PackedScene" uid="uid://6gf4lvwgbxde" path="res://scenes/levels/main_menu.tscn" id="2_4b1hm"]
[ext_resource type="PackedScene" uid="uid://cwms5tpukff7t" path="res://scenes/main-menu/user_options.tscn" id="3_m4j2j"]
[ext_resource type="StyleBox" uid="uid://bobnyeygn5orx" path="res://scenes/UI/stylebox_start.tres" id="4_kil4e"]
[ext_resource type="Script" path="res://scenes/main-menu/level_transition.gd" id="4_viftl"]
[ext_resource type="StyleBox" uid="uid://c8ntwmpj30y61" path="res://scenes/UI/stylebox_resume.tres" id="5_m5esn"]
[ext_resource type="StyleBox" uid="uid://wl6y4unkyaer" path="res://scenes/UI/stylebox_alter.tres" id="6_m5esn"]
[ext_resource type="StyleBox" uid="uid://cig4aayky7nmg" path="res://scenes/UI/stylebox_levelsel.tres" id="7_fif0i"]
[ext_resource type="StyleBox" uid="uid://bmlqpyygh8ejf" path="res://scenes/UI/style_exit.tres" id="7_l0x64"]
[ext_resource type="PackedScene" uid="uid://bwihula06msc5" path="res://scenes/main-menu/level_options.tscn" id="9_ivmv0"]

[sub_resource type="Animation" id="Animation_h26tg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_resolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_viftl"]
resource_name = "pause"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_resolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.666667)]
}

[sub_resource type="Animation" id="Animation_aukgh"]
resource_name = "resolve"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_resolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1iqh0"]
_data = {
&"RESET": SubResource("Animation_h26tg"),
&"pause": SubResource("Animation_viftl"),
&"resolve": SubResource("Animation_aukgh")
}

[sub_resource type="Gradient" id="Gradient_qs7d8"]
offsets = PackedFloat32Array(0.00823045, 1)
colors = PackedColorArray(0.333333, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ngnu3"]
gradient = SubResource("Gradient_qs7d8")

[node name="Main_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ngnu3")
menu_scene = ExtResource("2_4b1hm")

[node name="Level_Transition" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_viftl")

[node name="color_resolve_rect" type="ColorRect" parent="Level_Transition"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Level_Transition"]
libraries = {
&"": SubResource("AnimationLibrary_1iqh0")
}

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Menu"]
visible = false
position = Vector2(519, 309)
scale = Vector2(9.30078, 1192.75)
texture = SubResource("GradientTexture1D_ngnu3")

[node name="ClockBackground" type="Control" parent="Menu"]
anchors_preset = 0
offset_left = -636.0
offset_top = -129.0
offset_right = 820.0
offset_bottom = 1327.0
script = ExtResource("1_qs7d8")

[node name="Timer" type="Timer" parent="Menu/ClockBackground"]
autostart = true

[node name="SlidingContainer" type="Control" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterStuff" type="CenterContainer" parent="Menu/SlidingContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 75.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuButtons" type="VBoxContainer" parent="Menu/SlidingContainer/CenterStuff"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="Menu/SlidingContainer/CenterStuff/MainMenuButtons"]
layout_mode = 2
tooltip_text = "Start the time"
theme_override_styles/focus = ExtResource("4_kil4e")
theme_override_styles/hover = ExtResource("4_kil4e")
theme_override_styles/pressed = ExtResource("4_kil4e")
theme_override_styles/normal = ExtResource("4_kil4e")

[node name="Button4" type="Button" parent="Menu/SlidingContainer/CenterStuff/MainMenuButtons"]
visible = false
layout_mode = 2
tooltip_text = "Resume the Time"
theme_override_styles/focus = ExtResource("5_m5esn")
theme_override_styles/hover = ExtResource("5_m5esn")
theme_override_styles/pressed = ExtResource("5_m5esn")
theme_override_styles/normal = ExtResource("5_m5esn")

[node name="Button2" type="Button" parent="Menu/SlidingContainer/CenterStuff/MainMenuButtons"]
layout_mode = 2
tooltip_text = "Alter the time"
theme_override_styles/focus = ExtResource("6_m5esn")
theme_override_styles/hover = ExtResource("6_m5esn")
theme_override_styles/pressed = ExtResource("6_m5esn")
theme_override_styles/normal = ExtResource("6_m5esn")

[node name="Button5" type="Button" parent="Menu/SlidingContainer/CenterStuff/MainMenuButtons"]
layout_mode = 2
tooltip_text = "Level Selection"
theme_override_styles/focus = ExtResource("7_fif0i")
theme_override_styles/hover = ExtResource("7_fif0i")
theme_override_styles/pressed = ExtResource("7_fif0i")
theme_override_styles/normal = ExtResource("7_fif0i")

[node name="Button3" type="Button" parent="Menu/SlidingContainer/CenterStuff/MainMenuButtons"]
layout_mode = 2
tooltip_text = "Exit the time"
theme_override_styles/focus = ExtResource("7_l0x64")
theme_override_styles/hover = ExtResource("7_l0x64")
theme_override_styles/pressed = ExtResource("7_l0x64")
theme_override_styles/normal = ExtResource("7_l0x64")

[node name="UserOptions" parent="Menu/SlidingContainer" instance=ExtResource("3_m4j2j")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 157.0
offset_top = 5.0
offset_right = 157.0
offset_bottom = 5.0

[node name="LevelOptions" parent="Menu/SlidingContainer" instance=ExtResource("9_ivmv0")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="timeout" from="Menu/ClockBackground/Timer" to="Menu/ClockBackground" method="_on_timer_timeout"]
[connection signal="pressed" from="Menu/SlidingContainer/CenterStuff/MainMenuButtons/Button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Menu/SlidingContainer/CenterStuff/MainMenuButtons/Button4" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Menu/SlidingContainer/CenterStuff/MainMenuButtons/Button2" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu/SlidingContainer/CenterStuff/MainMenuButtons/Button5" to="." method="_on_level_selection_button_pressed"]
[connection signal="pressed" from="Menu/SlidingContainer/CenterStuff/MainMenuButtons/Button3" to="." method="_on_quit_button_pressed"]
